# sysiphos_excercise

./: .gitignore  CMakeLists.txt  README.md
app/src/: main.cpp
lib/include/: sysiphos.h
lib/src/: sysiphos.cpp
